[package]
name = "agent-messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
