[package]
name = "agent-messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
axum = "0.7"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdh"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
